--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,11 +10,12 @@ readme = "Readme.md"
 pylliterate = "pylliterate.cli:app"
 
 [tool.poetry.dependencies]
-typer = "0.12.3"
-rich = "9.0.1"
-PyYAML = "6.0.1"
-pydantic = "2.7.1"
-watchdog = "2.3.1"
+python="^3.12"
+typer = "^0.12.3"
+rich = "^9.0.1"
+PyYAML = "^6.0.1"
+pydantic = "^2.7.1"
+watchdog = "^2.3.1"
 
 [tool.poetry.dev-dependencies]
 mkdocs = "1.5.3"
