--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,10 @@
 [tool.poetry]
 name = "pylliterate"
-version = "0.0.4"
+version = "0.0.5"
 description = "Unobtrusive literate programming experience for Python pragmatists"
-authors = ["Jesús Enrique Fuentes <jesusefg12@gmail.com>", "Alejandro Piad <alepiad@gmail.com>"]
+# Poetry is ignoring multiple autors configuration line but's ok :)
+authors = ["Alejandro Piad <alepiad@gmail.com>", "Jesús Enrique Fuentes <jesusefg12@gmail.com>"]
+
 license = "MIT"
 readme = "Readme.md"
 
