Updated .gitignore, added cspell.json, updated site name.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Illiterate
+site_name: Pylliterate
 site_url: https://gaspect.github.io/pylliterate
 repo_url: https://github.com/gaspect/pylliterate
 
